<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linearlayout_toolbar_main"
              android:orientation="horizontal"
              android:layout_width="96dp"
              android:layout_height="48dp"
              android:layout_gravity="left|bottom"  >

    <ImageView
        android:id="@+id/imageview_main_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="8dp"
        android:onClick="toggleMainMenu"
        android:background="@drawable/statelist_toolbar_button"/>

    <ImageView
        android:id="@+id/imageview_sheet_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="8dp"
        android:onClick="toggleSheetMenu"
        android:background="@drawable/statelist_toolbar_button"/>

</LinearLayout>