<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linearlayout_toolbar"
              android:orientation="horizontal"
              android:layout_width="104dp"
              android:layout_height="56dp"
              android:layout_gravity="top|left"
              android:gravity="left"
              android:background="#00FFFFFF"
              android:padding="0dp">

    <ImageView
        android:id="@+id/imageview_toolbar_pencil_eraser"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="8dp"
        android:clickable="true"
        android:onClick="toggleTool"
        android:background="@drawable/statelist_toolbar_button"/>

    <ImageView
        android:id="@+id/view_toolbar_stroke_settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/color_button_shape"
        android:scaleType="center"
        android:onClick="toggleStrokeSettings"
        android:clickable="true"
        android:background="@drawable/statelist_toolbar_button"/>

</LinearLayout>