<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linearlayout_toolbar_camera"
              android:orientation="horizontal"
              android:layout_width="wrap_content"
              android:layout_height="48dp"
              android:layout_gravity="left|bottom"  >

    <ImageView
        android:id="@+id/imageview_toolbar_button_zoom"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="8dp"
        android:onClick="resetZoom"
        android:background="@drawable/statelist_toolbar_button"/>

    <TextView
        android:id="@+id/textview_display_zoom"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:minEms="3"
        android:textSize="18sp"
        android:textColor="@color/grey"
        android:gravity="left|center_vertical"/>

    <ImageView
        android:id="@+id/imageview_toolbar_button_position"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="8dp"
        android:onClick="resetPosition"
        android:background="@drawable/statelist_toolbar_button"/>

    <TextView
        android:id="@+id/textview_display_position"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:textSize="18sp"
        android:textColor="@color/grey"
        android:gravity="left|center_vertical"/>

</LinearLayout>