<?xml version="1.0" encoding="utf-8"?>
<resources>

    <item name="tag_file" type="id"/>
    <item name="tag_name" type="id"/>

</resources>