<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:onClick="selectProject"
    android:clickable="true"
    android:longClickable="true">

    <ImageView
        android:id="@+id/imageview_project_thumbnail"
        android:layout_width="180dp"
        android:layout_height="101dp"
        android:scaleType="fitCenter"
        android:layout_gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="24dp"/>

    <TextView
        android:id="@+id/textview_project_name"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:textSize="18sp"
        android:textColor="@color/text_black"
        android:gravity="left|center_vertical"
        android:layout_gravity="left|center_vertical"
        android:paddingRight="12dp"/>

    <TextView
        android:id="@+id/textview_project_modified_date"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:textSize="18sp"
        android:textColor="@color/grey"
        android:gravity="left|center_vertical"
        android:layout_gravity="left|center_vertical"/>

</LinearLayout>